# stock-logistics-request

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
setup/_metapackage/: pyproject.toml  setup.py
stock_request/: README.rst  __manifest__.py
stock_request/i18n/: ca.po  de.po  el_GR.po  es.po  es_ES.po  eu.po  fi.po  fr.po  fr_CH.po  fr_FR.po  gl.po  hr.po  hr_HR.po  it.po  ja.po  ja_JP.po  nl.po  nl_NL.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  stock_request.pot  tr.po  tr_TR.po  vi_VN.po  zh_CN.po
stock_request/models/: stock_move_line.py  stock_request.py  stock_request_abstract.py  stock_request_order.py  stock_rule.py
stock_request/readme/: ROADMAP.rst
stock_request/security/: stock_request_security.xml
stock_request/tests/: test_stock_request.py
stock_request/views/: res_config_settings_views.xml  stock_request_order_views.xml  stock_request_views.xml
stock_request_analytic/: README.rst  __manifest__.py
stock_request_analytic/i18n/: pt_BR.po  zh_CN.po
stock_request_analytic/models/: __init__.py  stock_request.py  stock_request_order.py  stock_rule.py
stock_request_direction/: README.rst  __manifest__.py
stock_request_kanban/: README.rst  __manifest__.py
stock_request_lot/: README.rst  __init__.py  __manifest__.py
stock_request_mrp/: README.rst  __manifest__.py  hooks.py
stock_request_picking_type/: README.rst  __manifest__.py
stock_request_purchase/: README.rst  __manifest__.py
stock_request_stage/: README.rst
stock_request_submit/: README.rst  __manifest__.py
stock_request_tier_validation/: README.rst  __manifest__.py
(+82 files in other folders)
