[project]
name = "odoo-addons-oca-stock-logistics-request"
version = "17.0.20240611.0"
dependencies = [
    "odoo-addon-stock_request>=17.0dev,<17.1dev",
    "odoo-addon-stock_request_mrp>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
