[project]
name = "odoo-addons-oca-stock-logistics-request"
version = "17.0.20240917.0"
dependencies = [
    "odoo-addon-stock_request>=17.0dev,<17.1dev",
    "odoo-addon-stock_request_direction>=17.0dev,<17.1dev",
    "odoo-addon-stock_request_kanban>=17.0dev,<17.1dev",
    "odoo-addon-stock_request_mrp>=17.0dev,<17.1dev",
    "odoo-addon-stock_request_picking_type>=17.0dev,<17.1dev",
    "odoo-addon-stock_request_purchase>=17.0dev,<17.1dev",
    "odoo-addon-stock_request_stage>=17.0dev,<17.1dev",
    "odoo-addon-stock_request_submit>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
